# marketing-agent

./: .env.sample  .gitignore  README.md  about.html  achievements.html  certifications.html  contact.html  experience.html  index.html  main.js  procfile  projects.html  pyproject.toml  requirements.txt  style.css  verify_guardrails.py
Data-Extraction/annual-report/: notebook.ipynb
Data-Extraction/website/: notebook.ipynb
Data-Extraction/yt-video/: data_rag_ready.csv  dilmah_videos.csv  dilmah_videos_transcription.csv  dilmah_videos_transcription_filtered.csv  notebook_01.ipynb  pipeline.py
content_researcher_agent/: agent.py  prompt.py  tools.py
guard_rails/: callbacks.py  runner.py
marketing_agent/: agent.py  prompt.py
rag-pipeline/: notebook_01_chunking_strategy.ipynb  notebook_02_create_embedding.ipynb  notebook_03_querying_db.ipynb
rag-pipeline/annual_report_data/: page_100.md  page_102.md  page_104.md  page_105.md  page_106.md  page_108.md  page_11.md  page_110.md  page_111.md  page_114.md  page_116.md  page_118.md  page_119.md  page_122.md  page_127.md  page_129.md  page_130.md  page_131.md  page_132.md  page_133.md  page_134.md  page_136.md  page_137.md  page_138.md  page_139.md  page_140.md  page_141.md  page_142.md  page_144.md  page_145.md  page_147.md  page_149.md  page_15.md  page_154.md  page_158.md  page_161.md  page_162.md  page_163.md  page_165.md  page_166.md  (+78 more)
rag-pipeline/website_data/: www.dilmahtea.com_.md  (+6 more)
social_lead_agent/: agent.py  prompt.py  tools.py
visualist_agent/: __init__.py  agent.py  prompt.py  tools.py
(+135 files in other folders)
